--- a/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>{% block title %}{% endblock %}</title>
+    {% block stylesheets %}
+    <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap-responsive.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/vectorfacebacklog/css/font-awesome.css') }}" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="{{ asset('bundles/vectorfacebacklog/css/base.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/vectorfacebacklog/css/blue.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/vectorfacebacklog/css/slidebox.css') }}" rel="stylesheet">
+    {% endblock %}
+</head>
+<body>
+    <div class="navbar">
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <a class="brand" href="">Backlog</a>
+          </div>
+      </div>
+  </div>
+  <div class="container">
+    <div class="row">
+        <div class="span12">
+            {% block content %}{% endblock %}
+        </div>
+    </div>
+</div>
 
+{% block javascripts %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+<script src="{{ asset('bundles/vectorfacebacklog/js/bootstrap.min.js') }}" type="text/javascript" /></script>
+{% endblock %}
+
+</body>
+</html>
