--- a/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
@@ -2,30 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}Backlogs{% endblock %}</title>
     {% block stylesheets %}
     <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap-responsive.min.css') }}" rel="stylesheet">
-    <link href="{{ asset('bundles/vectorfacebacklog/css/font-awesome.css') }}" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href="{{ asset('bundles/vectorfacebacklog/css/base.css') }}" rel="stylesheet">
-    <link href="{{ asset('bundles/vectorfacebacklog/css/blue.css') }}" rel="stylesheet">
-    <link href="{{ asset('bundles/vectorfacebacklog/css/slidebox.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap-override.css') }}" rel="stylesheet">
     {% endblock %}
 </head>
 <body>
-    <div class="navbar">
+
+    <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
-            <div class="container-fluid">
-                <a class="brand" href="">Backlog</a>
-          </div>
-      </div>
-  </div>
-  <div class="container">
-    <div class="row">
-        <div class="span12">
-            {% block content %}{% endblock %}
+            <div class="container">
+                <div class="row">
+                    <div class="span2">
+                        <span class="brand">Backlogs</span>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+
+    <div class="container">
+        {% block content %}{% endblock %}
     </div>
 </div>
 
