--- a/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
@@ -1,37 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>{% block title %}Backlogs{% endblock %}</title>
-    {% block stylesheets %}
-    <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap-responsive.min.css') }}" rel="stylesheet">
-    <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap-override.css') }}" rel="stylesheet">
-    {% endblock %}
-</head>
-<body>
+{% extends 'VectorfaceBacklogBundle:Default:layout.html.twig' %}
 
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <div class="row">
-                    <div class="span2">
-                        <span class="brand">Backlogs</span>
+{% block content%}
+
+<div class="row">
+    <div class="span12">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Title</th>
+                    <th>Milestone</th>
+                    <th>Assigned To</th>
+                    <th>&nbsp;</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>index</td>
+                    <td><a href="#">Generate automatic CSV files for BestPay</a></td>
+                    <td>Sprint 5</td>
+                    <td>Bill MacSween</td>
+                    <td>
+                      <div class="btn-group pull-right">
+                        <a class="btn arrow-up" href="#"><i class="icon-arrow-up"></i></a>
+                        <a class="btn arrow-down" href="#"><i class="icon-arrow-down"></i></a>
+                        <a class="btn btn-warning" href="#"><i class="icon-trash"></i></a>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 </div>
 
-{% block javascripts %}
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
-<script src="{{ asset('bundles/vectorfacebacklog/js/bootstrap.min.js') }}" type="text/javascript" /></script>
 {% endblock %}
-
-</body>
-</html>
