--- a/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
@@ -7,6 +7,7 @@
     <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap-responsive.min.css') }}" rel="stylesheet">
     <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap-override.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/vectorfacebacklog/css/ui-lightness/jquery-ui-1.10.3.custom.min.css') }}" rel="stylesheet">
     {% endblock %}
 </head>
 <body>
@@ -20,7 +21,7 @@
                     </div>
                     <div class="span5 offset5">
                     <form class="navbar-search pull-right">
-                        <input type="text" class="search-query" autofocus="autofocus" placeholder="Ticket Title">
+                        <input type="text" class="search-ticket search-query" autofocus="autofocus" placeholder="Ticket Title">
                     </form>
                 </div>
                 </div>
@@ -35,8 +36,10 @@
 
 {% block javascripts %}
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 <script src="{{ asset('bundles/vectorfacebacklog/js/bootstrap.min.js') }}" type="text/javascript" /></script>
 <script src="{{ asset('bundles/vectorfacebacklog/js/arrows.js') }}" type="text/javascript" /></script>
+<script src="{{ asset('bundles/vectorfacebacklog/js/search-tickets.js') }}" type="text/javascript" /></script>
 {% endblock %}
 
 </body>
