--- a/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
@@ -12,6 +12,21 @@
 </head>
 <body>
 
+
+    <div id="deleteModal" class="modal hide fade" tabindex="-1" role="dialog">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3 id="myModalLabel">Delete this entry?</h3>
+        </div>
+        <div class="modal-body">
+            <div class="alert alert-error">This entry will be permanently deleted from the database. Are you sure?</div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+            <button class="btn btn-danger trigger-delete" data-ixBug="">Delete</button>
+        </div>
+    </div>
+
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
@@ -20,10 +35,10 @@
                         <span class="brand">Backlogs</span>
                     </div>
                     <div class="span5 offset5">
-                    <form class="navbar-search pull-right">
-                        <input type="text" class="search-ticket search-query" autofocus="autofocus" placeholder="Ticket Title">
-                    </form>
-                </div>
+                        <form class="navbar-search pull-right">
+                            <input type="text" class="search-ticket search-query" autofocus="autofocus" placeholder="Ticket Title">
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -32,15 +47,15 @@
     <div class="container">
         {% block content %}{% endblock %}
     </div>
-</div>
 
-{% block javascripts %}
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="{{ asset('bundles/vectorfacebacklog/js/bootstrap.min.js') }}" type="text/javascript" /></script>
-<script src="{{ asset('bundles/vectorfacebacklog/js/arrows.js') }}" type="text/javascript" /></script>
-<script src="{{ asset('bundles/vectorfacebacklog/js/search-tickets.js') }}" type="text/javascript" /></script>
-{% endblock %}
+    {% block javascripts %}
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src="{{ asset('bundles/vectorfacebacklog/js/bootstrap.min.js') }}" type="text/javascript" /></script>
+    <script src="{{ asset('bundles/vectorfacebacklog/js/arrows.js') }}" type="text/javascript" /></script>
+    <script src="{{ asset('bundles/vectorfacebacklog/js/search-tickets.js') }}" type="text/javascript" /></script>
+    <script src="{{ asset('bundles/vectorfacebacklog/js/delete.js') }}" type="text/javascript" /></script>
+    {% endblock %}
 
 </body>
 </html>
