--- a/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
@@ -19,7 +19,7 @@
             <h3 id="myModalLabel">Delete this entry?</h3>
         </div>
         <div class="modal-body">
-            <div class="alert alert-error">This entry will be permanently deleted from the database. Are you sure?</div>
+            <div class="alert alert-error">Removing this entry will <b>not</b> remove it from Fogbugz. Are you sure?</div>
         </div>
         <div class="modal-footer">
             <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
