Clearing up messages; Suggested by Chris

--- a/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
@@ -36,7 +36,7 @@
                     </div>
                     <div class="span5 offset5">
                         <form class="navbar-search pull-right">
-                            <input type="text" class="search-ticket search-query" autofocus="autofocus" placeholder="Ticket Title">
+                            <input type="text" class="search-ticket search-query" autofocus="autofocus" placeholder="Add to backlog">
                         </form>
                     </div>
                 </div>
