--- a/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
@@ -34,29 +34,41 @@
                     <div class="span2">
                         <span class="brand">Backlogs</span>
                     </div>
-                    <div class="span5 offset5">
-                        <form class="navbar-search pull-right">
-                            <input type="text" class="search-ticket search-query" autofocus="autofocus" placeholder="Add to backlog">
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+                    <ul class="nav pull-right">
+                      <li>
+                         <form class="navbar-search">
+                             <input type="text" class="search-ticket search-query" autofocus="autofocus" placeholder="Add to backlog">
+                         </form>
+                     </li>
+                     <li class="divider-vertical"></li>
+                     <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                          <li class="disabled"><a href="#">Force Sync</a></li>
+                          <li class="disabled"><a href="#">Monitor</a></li>
+                          <li class="divider"></li>
+                          <li><a href="https://github.com/Vectorface/fogbugz-global-backlog/issues">Suggest Feature</a></li>
+                      </ul>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </div>
+</div>
 
-    <div class="container">
-        {% block content %}{% endblock %}
-    </div>
+<div class="container">
+    {% block content %}{% endblock %}
+</div>
 
-    {% block javascripts %}
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    <script src="{{ asset('bundles/vectorfacebacklog/js/bootstrap.min.js') }}" type="text/javascript" /></script>
-    <script src="{{ asset('bundles/vectorfacebacklog/js/arrows.js') }}" type="text/javascript" /></script>
-    <script src="{{ asset('bundles/vectorfacebacklog/js/search-tickets.js') }}" type="text/javascript" /></script>
-    <script src="{{ asset('bundles/vectorfacebacklog/js/delete.js') }}" type="text/javascript" /></script>
-    <script src="{{ asset('bundles/vectorfacebacklog/js/tooltip.js') }}" type="text/javascript" /></script>
-    {% endblock %}
+{% block javascripts %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+<script src="{{ asset('bundles/vectorfacebacklog/js/bootstrap.min.js') }}" type="text/javascript" /></script>
+<script src="{{ asset('bundles/vectorfacebacklog/js/arrows.js') }}" type="text/javascript" /></script>
+<script src="{{ asset('bundles/vectorfacebacklog/js/search-tickets.js') }}" type="text/javascript" /></script>
+<script src="{{ asset('bundles/vectorfacebacklog/js/delete.js') }}" type="text/javascript" /></script>
+<script src="{{ asset('bundles/vectorfacebacklog/js/tooltip.js') }}" type="text/javascript" /></script>
+{% endblock %}
 
 </body>
 </html>
