--- a/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
@@ -32,7 +32,7 @@
             <div class="container">
                 <div class="row">
                     <div class="span2">
-                        <span class="brand">Backlogs</span>
+                        <span class="brand"><a href="{{ path('vectorface_backlog_main') }}">Backlogs</a></span>
                     </div>
                     <ul class="nav pull-right">
                       <li>
