--- a/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
@@ -42,7 +42,7 @@
                         </li>
                         <li class="divider-vertical"></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-off"></i></a>
                             <ul class="dropdown-menu">
                                 <li class="disabled"><a href="#">Force Sync</a></li>
                                 <li class="disabled"><a href="#">Monitor</a></li>
