--- a/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
@@ -44,8 +44,8 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-off"></i></a>
                             <ul class="dropdown-menu">
-                                <li class="disabled"><a href="#">Force Sync</a></li>
-                                <li class="disabled"><a href="#">Monitor</a></li>
+                                <li class="disabled"><a href="#">Force Update</a></li>
+                                <li class="disabled"><a href="#">Push Backlog</a></li>
                                 <li class="divider"></li>
                                 <li><a href="https://github.com/Vectorface/fogbugz-global-backlog/issues">Suggest Feature</a></li>
                             </ul>
