--- a/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
@@ -42,7 +42,7 @@
                         </li>
                         <li class="divider-vertical"></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-off"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li class="disabled"><a href="#">Force Update</a></li>
                                 <li class="disabled"><a href="#">Push Backlog</a></li>
