--- a/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/layout.html.twig
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-static-top">
         <div class="navbar-inner">
             <div class="container">
                 <div class="row">
