Renaming layout.html.twig to base.html.twig

--- a/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'VectorfaceBacklogBundle:Default:layout.html.twig' %}
+{% extends 'VectorfaceBacklogBundle::base.html.twig' %}
 
 {% block content%}
 
