Adding drag & drop UI

--- a/src/Vectorface/BacklogBundle/Resources/views/base.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/base.html.twig
@@ -65,6 +65,7 @@
     <script src="{{ asset('bundles/vectorfacebacklog/js/delete.js') }}" type="text/javascript" /></script>
     <script src="{{ asset('bundles/vectorfacebacklog/js/tooltip.js') }}" type="text/javascript" /></script>
     <script src="{{ asset('bundles/vectorfacebacklog/js/global.js') }}" type="text/javascript" /></script>
+    <script src="{{ asset('bundles/vectorfacebacklog/js/sortable.js') }}" type="text/javascript" /></script>
     {% endblock %}
 
 </body>
