--- a/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
@@ -4,9 +4,10 @@
 
 <div class="row">
     <div class="span12">
-        <table class="table-tickets table">
+        <table class="table-tickets table" id="sortable">
             <thead>
                 <tr>
+                    <th></th>
                     <th>#</th>
                     <th>Title</th>
                     <th>Milestone</th>
@@ -18,6 +19,7 @@
             <tbody>
                 {% for backlog in backlogs %}
                 <tr data-ixBug="{{ backlog.ixBug }}" data-position="{{ loop.index-1 }}">
+                    <td><i class="icon-list"></i></td>
                     <td>{{ backlog.ixBug }}</td>
                     <td><a href="{{ fogbugz_url_ticket }}{{ backlog.ixBug }}" target="_blank">{{ backlog.sTitle }}</a></td>
                     <td>
@@ -31,8 +33,6 @@
                     <td>{{ backlog.sPersonAssignedTo }}</td>
                     <td>
                         <div class="btn-group pull-right">
-                            <a class="btn arrow-up" href="#"><i class="icon-arrow-up"></i></a>
-                            <a class="btn arrow-down" href="#"><i class="icon-arrow-down"></i></a>
                             <a class="btn btn-danger trigger-modal-delete" href="#"><i class="icon-trash"></i></a>
                         </div>
                     </td>
