Backend for the drag & drop

--- a/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="span12">
-        <table class="table-tickets table" id="sortable">
+        <table class="table-tickets table table-striped" id="sortable">
             <thead>
                 <tr>
                     <th></th>
