--- a/src/Vectorface/BacklogBundle/Resources/views/base.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
     <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap-responsive.min.css') }}" rel="stylesheet">
     <link href="{{ asset('bundles/vectorfacebacklog/css/bootstrap-override.css') }}" rel="stylesheet">
     <link href="{{ asset('bundles/vectorfacebacklog/css/ui-lightness/jquery-ui-1.10.3.custom.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('bundles/vectorfacebacklog/css/base.css') }}" rel="stylesheet">
     {% endblock %}
 </head>
 <body>
