Add twig extension

--- a/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
@@ -21,7 +21,7 @@
                 <tr data-ixBug="{{ backlog.ixBug }}">
                     <td><i class="icon-list draggable"></i></td>
                     <td>{{ backlog.ixBug }}</td>
-                    <td><a href="{{ fogbugz_url_ticket }}{{ backlog.ixBug }}" target="_blank">{{ backlog.sTitle }}</a></td>
+                    <td><a href="{{ fogbugzticket(backlog.ixBug) }}" target="_blank">{{ backlog.sTitle }}</a></td>
                     <td>
                         {% if backlog.sFixFor == 'Undecided' %}
                         <div class="muted">Undecided</div>
