--- a/src/Vectorface/BacklogBundle/Resources/views/base.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/base.html.twig
@@ -42,10 +42,10 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li class="disabled"><a href="#">Force Update</a></li>
-                            <li class="disabled"><a href="#">Push Backlog</a></li>
+                            <li class="dropdown-pull"><a href="{{ path('vectorface_backlog_pull') }}"><i class=" icon-arrow-left"></i>&nbsp;Pull</a></li>
+                            <li class="dropdown-push"><a href="{{ path('vectorface_backlog_push') }}"><i class=" icon-arrow-right"></i>&nbsp;Push</a></li>
                             <li class="divider"></li>
-                            <li><a href="https://github.com/Vectorface/fogbugz-global-backlog/issues">Suggest Feature</a></li>
+                            <li><a href="https://github.com/Vectorface/fogbugz-global-backlog/issues"><i class="icon-comment"></i>&nbsp;Suggest Feature</a></li>
                         </ul>
                     </li>
                 </ul>
