Resolves Issue #19 - Modal that allows edits

--- a/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Default/index.html.twig
@@ -39,6 +39,7 @@
                     </td>
                     <td>
                         <div class="btn-group pull-right">
+                            <a class="btn trigger-modal-edit" href="#"><i class="icon-pencil"></i></a>
                             <a class="btn btn-danger trigger-modal-delete" href="#"><i class="icon-trash"></i></a>
                         </div>
                     </td>
