--- a/src/Vectorface/BacklogBundle/Resources/views/Sprint/view.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Sprint/view.html.twig
@@ -1,4 +1,6 @@
 {% extends 'VectorfaceBacklogBundle::base.html.twig' %}
+{% block autocomplete_disabled %}{% endblock %}
+{% block autocomplete_list_id %}{{ listId }}{% endblock %}
 
 {% block content%}
 
