--- a/src/Vectorface/BacklogBundle/Resources/views/Sprint/index.html.twig
+++ b/src/Vectorface/BacklogBundle/Resources/views/Sprint/index.html.twig
@@ -6,6 +6,11 @@
     <div class="span12">
         <div class="clearfix">
             <h3 style="display:inline;">Sprints</span></h3>
+            <div class="btn-toolbar pull-right" style="margin-top:0px">
+                <div class="btn-group">
+                    <a class="btn btn-success" href="#"><i class="icon-plus"></i></a>
+                </div>
+            </div>
         </div>
         <hr>
     </div>
